--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@ Mybatis
         <p><span>余梓沛 &copy; 2017</span>
             <span>
                 
-                <a href="http://www.miitbeian.gov.cn/" target="_blank">粤ICP备17095213号</a><br>
+                <a href="http://beian.miit.gov.cn/" target="_blank">粤ICP备17095213号</a><br>
                 
                 Power by <a href="http://hexo.io/" target="_blank">Hexo</a> Theme <a href="https://github.com/yscoder/hexo-theme-indigo" target="_blank">indigo</a>
             </span>
